start fix headers on pages [ci skip]

--- a/app/assets/stylesheets/application/main.sass
+++ b/app/assets/stylesheets/application/main.sass
@@ -33,39 +33,7 @@
 @import base/helpers
 @import base/theme
 
-@import global/search_bar
-@import global/user_widget
-@import global/banner
-@import global/header
-@import global/footer
-@import global/form
-
-@import elements/order_steps
-@import elements/images
-@import elements/dropdown_submenu
-@import elements/add_to_wishlist
-
-@import blocks/product/single_product
-@import blocks/product/retable_with_reviews
-@import blocks/product/additional_options
-@import blocks/commerce
-@import blocks/filters
-
-@import blocks/welcome
-@import blocks/news
-@import blocks/product
-@import blocks/product/in_stock
-@import blocks/sessions
-@import blocks/review
-@import blocks/simple_captcha
-@import blocks/user_profile
-@import blocks/user_watched
-@import blocks/page
-@import blocks/brand
-@import blocks/payments
-@import blocks/call_me/index
-
-@import blocks/cart
-@import blocks/order
-
-@import blocks/menu
+// add ability to include folder without write index file in path
+@import global/index
+@import elements/index
+@import blocks/index
