--- a/app/assets/stylesheets/application/global/_footer.sass
+++ b/app/assets/stylesheets/application/global/_footer.sass
@@ -13,10 +13,11 @@ footer
   .menu li > a
     font-size: $font-size-base + 6
 
+  .l-footer-search-bar
+    text-align: center
+
   .search-bar
-    float: left
-    margin-top: 15px
-    margin-left: 18px
+    margin-top: 25px
 
   .row
     +box-shadow(inset 0 3px 10px -3px rgba(50, 50, 50, 0.4))
