--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     - if Rails.env.production?
       %meta{name: 'yandex-verification', content: '7a36516f56ed1101'}
 
-    = favicon_link_tag 'favicon.png', type: 'image/png'
+    = favicon_link_tag 'favicon.ico'
     = csrf_meta_tags
     = include_gon(init: true)
     = stylesheet_link_tag 'application'
