change all headers (h) to h1 where it was needed

--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -5,7 +5,7 @@
 
   .b-info
     .b-info-main
-      %p.title= link_to product.title, product
+      %h3.title= link_to product.title, product
       - if product.characteristics_products.present?
         %ul.characteristics-list
           = render partial: 'product_categories/includes/characteristic',
