feature Reviews on product page

--- a/app/assets/stylesheets/application/base/helpers.sass
+++ b/app/assets/stylesheets/application/base/helpers.sass
@@ -40,7 +40,7 @@ ul.menu
 
 .btn-pink
   background-color: $pink
-  &, &:hover
+  &, &:hover, &:focus
     color: $white
   &:hover
     background-color: $darkPink
