--- a/app/assets/stylesheets/application/blocks/product.sass
+++ b/app/assets/stylesheets/application/blocks/product.sass
@@ -1,9 +1,9 @@
 .b-product
   h4
-    font-size: 28px
+    font-size: $font-size-base * 2
     margin: 0 0 5px
 
-  .b-new-review-link
+  .b-new-review-btn
     font-size: $font-size-base + 4
     margin-bottom: 10px
 
