--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -11,8 +11,9 @@
     .b-info-short
       = price_with_discount(product.price, product.price_with_discount)
       .b-product-ratable-with-reviews.smal
-        .ratable.read_only{ data: { score: product.average_score } }
-        = link_to t('views.product.reviews_count', count: product.published_reviews_count), product_path(product, anchor: 'reviews'), class: 'reviews-count'
+        .b-ratable.read_only{ data: { score: product.average_score } }
+        .b-reviews-count
+          = link_to t('views.product.reviews_count', count: product.published_reviews_count), product_path(product, anchor: 'reviews')
       = icon_in_stock(product.in_stock, 'small')
 
     .b-commerce
