--- a/app/views/products/includes/_single_product.html.haml
+++ b/app/views/products/includes/_single_product.html.haml
@@ -8,7 +8,7 @@
     %h3.title= link_to product.title, product
     %p.price= I18n.t('views.product.with_currency', coust: price_formatted(product.price_with_discount))
     .b-product-ratable-with-reviews.smal
-      .ratable.read_only{ data: { score: product.average_score } }
+      .b-ratable.read_only{ data: { score: product.average_score } }
       = link_to t('views.product.reviews_count', count: product.published_reviews_count), product_path(product, anchor: 'reviews'), class: 'reviews-count'
     .b-commerce
       %ul.single-product{ class: main_class }
