feature add phone validator

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -36,8 +36,7 @@
     = javascript_include_tag 'i18n/translations'
     = render 'shared/includes/i18n'
     <!--[if lt IE 9]><!-->
-    = javascript_include_tag 'html5shiv/dist/html5shiv-printshiv.min'
-    = javascript_include_tag 'html5shiv/dist/html5shiv.min'
+    = javascript_include_tag 'ie'
     <!--<![endif]-->
     = yield :javascripts
 
