--- a/app/assets/stylesheets/application/blocks/product.sass
+++ b/app/assets/stylesheets/application/blocks/product.sass
@@ -1,8 +1,4 @@
 .b-product
-  h4
-    font-size: $font-size-base * 2
-    margin: 0 0 5px
-
   .b-new-review-btn
     font-size: $font-size-base + 4
     margin-bottom: 10px
@@ -21,3 +17,4 @@
   @import product/top_information
   @import product/tabs
   @import product/order_in_one_click
+  @import product/related_products
