--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -72,14 +72,16 @@
           class: 'more-review', data: { more: 0, count: Settings.product.reviews_count } if resource.published_reviews_count > Settings.product.reviews_count
 
   - if @show_presenter.related_products.any?
-    %h4#related-products= t('goods_supplied')
-    - @show_presenter.related_products.in_groups(Settings.product.related_group, false) do |group|
-      .b-related-products
-        = render partial: 'products/includes/single_product',
-          collection: group, as: :product, locals: { main_class: 'related' }
+    .l-product-related-products
+      .l-product-related-products-header
+        %h3#related-products= t('goods_supplied')
+      - @show_presenter.related_products.in_groups(Settings.product.related_group, false) do |group|
+        .b-related-products
+          = render partial: 'products/includes/single_product',
+            collection: group, as: :product, locals: { main_class: 'related' }
 
   - if @show_presenter.similar_products.any?
     .b-similar-products
-      %h4#similar-products= t('you_might_also_like')
+      %h3#similar-products= t('you_might_also_like')
       = render partial: 'products/includes/single_product',
         collection: @show_presenter.similar_products, as: :product, locals: { main_class: 'similar' }
