--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -3,8 +3,7 @@
   .b-info
     .b-info-main
       %h3.title= link_to product.title, product, title: product.title
-      .l-single-product-description
-        = product.short_desc.html_safe
+      .l-single-product-description= product.short_desc.html_safe
 
     .b-info-short
       = price_with_discount(product.price, product.price_with_discount)
