update get version active_admin, arbre, formtastic; fix many bugs with routing, form_buffers, inputs and collections;

--- a/app/assets/stylesheets/application/global/_footer.sass
+++ b/app/assets/stylesheets/application/global/_footer.sass
@@ -4,7 +4,7 @@ $right-footer-part-width: $containerWidth - $left-footer-part-width !default
 
 footer
   position: absolute
-  bottom: 0
+  bottom: -30px
   width: 100%
   clear: both
   background-color: $gray
