hotfix HTML SAFE for products desc [ci skip]

--- a/app/views/product_categories/includes/_product.html.haml
+++ b/app/views/product_categories/includes/_product.html.haml
@@ -4,7 +4,7 @@
     .b-info-main
       %h3.title= link_to product.title, product, title: product.title
       .l-single-product-description
-        = truncate product.description.html_safe, length: 400
+        = product.description.html_safe
 
     .b-info-short
       = price_with_discount(product.price, product.price_with_discount)
