made product's preview and product's desc linkable

--- a/app/assets/stylesheets/application/blocks/product/_single_product.sass
+++ b/app/assets/stylesheets/application/blocks/product/_single_product.sass
@@ -8,6 +8,19 @@ $b-short-info-width: 157px !default
   display: table
   float: left
 
+  .title
+    margin: 0 0 10px
+
+  .l-single-product-description
+    position: relative
+
+  .b-product-block-link
+    position: absolute
+    left: 0
+    right: 0
+    top: 0
+    bottom: 0
+
   &:last-child
     margin-right: 0
 
@@ -67,9 +80,6 @@ $b-short-info-width: 157px !default
       .b-info-main
         width: $b-info-main-width
         margin-right: $b-info-main-margin-right
-
-        .title
-          margin-bottom: 10px
 
         p
           margin: 12px 0
