--- a/app/views/shared/includes/_line_items.html.haml
+++ b/app/views/shared/includes/_line_items.html.haml
@@ -10,7 +10,7 @@
     %li
       .b-single-product.cart-list-user-widget
         .e-photo
-          = background_image_tag ImageDecorator.decorate(line_item).photo_url(:product, :related)
+          = linked_product_preview line_item.product, :product, :related
           = render 'line_items/includes/remove_line_item_link', line_item: line_item
         .b-info
           %p.title= link_to line_item.product_title, line_item.product
