feature mail's styles

--- a/app/views/mailers/order_mailer/user/created.html.haml
+++ b/app/views/mailers/order_mailer/user/created.html.haml
@@ -1,9 +1,8 @@
-%p
-  %strong= @order.user_name
-  , благодарим за Ваш заказ! Как только мы его обработаем, наш менеджер свяжется с Вами для уточнения деталей доставки и оплаты.
+.b-mail-user-message
+  = @order.user_name
+  , благодарим за Ваш заказ!
+  Как только мы его обработаем, наш менеджер свяжется с Вами для уточнения деталей доставки и оплаты.
 
-%p
+%p.strong
   Номер Вашего заказа:
   %span= @order.id
-
-= render 'mailers/shared/footer'
