--- a/app/views/yandex_market_lists/index.html.slim
+++ b/app/views/yandex_market_lists/index.html.slim
@@ -1,5 +1,7 @@
 .ma.mt20.mb20.w1000
   .clearfix.ffa.fs14.mb20
+    .pull-left
+      = link_to 'Выгрузить в YML', '#', class: 'ptz--btn'
     .pull-right
       span.mr10 элементов на стр:
       - %w[ 5 10 20 50 100 125 200 300 400 500 ].each do |num|
