--- a/app/assets/stylesheets/yandex_market/elco_styles.css.sass
+++ b/app/assets/stylesheets/yandex_market/elco_styles.css.sass
@@ -5,3 +5,7 @@
   border-left: 2px solid gray
 .elco-rb
   border-right: 2px solid gray
+
+.js--elco-status-block
+  border: 1px solid orange
+  border-radius: 3px
